RESOLVED FIXED60965
GraphicsContext3DSkia needs to honor the platform Sk_x_SHIFT value instead of assuming BGRA color
https://bugs.webkit.org/show_bug.cgi?id=60965
Summary GraphicsContext3DSkia needs to honor the platform Sk_x_SHIFT value instead of...
Grace Kloba
Reported 2011-05-17 09:27:31 PDT
Currently Skia version of GraphicsContext3D always uses BGRA8 format as source. It should check SK_x_SHIFT.
Attachments
Patch (1.70 KB, patch)
2011-05-17 09:32 PDT, Grace Kloba
no flags
Grace Kloba
Comment 1 2011-05-17 09:32:41 PDT
Kenneth Russell
Comment 2 2011-05-17 09:47:18 PDT
Comment on attachment 93779 [details] Patch Looks good. Thanks for taking care of this.
WebKit Commit Bot
Comment 3 2011-05-17 10:13:22 PDT
Comment on attachment 93779 [details] Patch Clearing flags on attachment: 93779 Committed r86679: <http://trac.webkit.org/changeset/86679>
WebKit Commit Bot
Comment 4 2011-05-17 10:13:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.