third_party/WebKit/Source/WebCore/platform/graphics/skia/GraphicsContext3DSkia.cpp
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Image.h"
 #include "ImageSource.h"
 #include "NativeImageSkia.h"
+#include "SkColorPriv.h"
 #include <wtf/OwnPtr.h>
 #include <wtf/PassOwnPtr.h>
 
@@ -81,7 +82,8 @@ bool GraphicsContext3D::getImageData(Image* image,
     ASSERT(skiaImage->rowBytes() == skiaImage->width() * 4);
     outputVector.resize(skiaImage->rowBytes() * skiaImage->height());
     return packPixels(reinterpret_cast<const uint8_t*>(skiaImage->getPixels()),
-                      SourceFormatBGRA8, skiaImage->width(), skiaImage->height(), 0,
+                      SK_B32_SHIFT ? SourceFormatRGBA8 : SourceFormatBGRA8,
+                      skiaImage->width(), skiaImage->height(), 0,
                       format, type, neededAlphaOp, outputVector.data());
 }
 
